--- a/bluemageparty.client/index.html
+++ b/bluemageparty.client/index.html
@@ -6,13 +6,18 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue 3 + Pinia - JWT Authentication Example</title>
-
-    <!-- bootstrap css -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div id="app"></div>
+    <v-app-bar :elevation="2">
+        <template v-slot:prepend>
+            <v-app-bar-nav-icon></v-app-bar-nav-icon>
+        </template>
+        
+        <v-app-bar-title>Application Bar</v-app-bar-title>
+    </v-app-bar>
+    <div id="app">
+    </div>
     <script type="module" src="/src/main.ts"></script>
 
     <!-- credits -->
