Freshly installed Vuetify, overwriting existing project.

--- a/bluemageparty.client/index.html
+++ b/bluemageparty.client/index.html
@@ -1,31 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue 3 + Pinia - JWT Authentication Example</title>
-</head>
-
-<body>
-    <v-app-bar :elevation="2">
-        <template v-slot:prepend>
-            <v-app-bar-nav-icon></v-app-bar-nav-icon>
-        </template>
-        
-        <v-app-bar-title>Application Bar</v-app-bar-title>
-    </v-app-bar>
-    <div id="app">
-    </div>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Vuetify 3</title>
+  </head>
+  <body>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-
-    <!-- credits -->
-    <div class="text-center mt-4">
-        <p>
-            <a>BlueMageParty Inc.</a>
-        </p>
-    </div>
-</body>
-
+  </body>
 </html>
